<resources>
    <string name="app_name">PersonalBest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="useremail">personalbestuser@ucsd.edu</string>
    <string name="username">personalbestuser01</string>

    <string name="title_activity_step_count">StepCountActivity</string>
    <string name="sessionName">Planned Walk Session</string>
    <string name="GoalName">Your Goal</string>
    <string name="ProgressName">Your Progress</string>


    <string name="button_inc_steps">Increase steps by 500</string>
    <string name="button_inc_time">Increase time by 1 hour</string>
    <string name="button_start_walk">Start Walk</string>
    <string name="view_step_count">0000</string>
    <string name="title_activity_settings">Set Your Height</string>

    <!-- Strings related to SettingsActivity -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Strings for planned walk -->
    <string name="PlannedWalkName">Planned Walk</string>
    <string name="getTime">%.2f seconds</string>
    <string name="goBackHomeScreenText">Go Back</string>
    <string name="speedStat">Speed:</string>
    <string name="stepsStat">Steps:</string>
    <string name="distanceStat">Distance:</string>
    <string name="timeStat">Elapsed Time: </string>
    <string name="pwSteps">%.0f steps</string>
    <string name="pwDistance">%.0f ft </string>
    <string name="pwSpeed">%.1f ft/sec </string>
    <string name="pwTime">%.0f seconds</string>
    <string name="currentWalkQuote">A better tomorrow starts today</string>
    <string name="end_walk_run_btn">End Walk/Run</string>
    <string name="start_walk_run_btn">Start Walk/Run</string>

</resources>
