<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
    <TextView
        android:id="@+id/textSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="0"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:id="@+id/textGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=" / 5000"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="24sp"
        android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonUpdateSteps"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="Update Steps"
        android:textSize="16sp" />

    <Button
        android:id="@+id/showStatsOnWalk"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-64dp"
        android:text="Show Current Stats"
        android:textSize="16sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/startWalkButton"
        android:padding="10sp"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_round"
        android:text="@string/start_walk_run_btn"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/endWalkButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-47dp"
        android:background="@drawable/button_round2"
        android:padding="10sp"
        android:text="@string/end_walk_run_btn"
        android:textColor="@android:color/background_light" />

    <!-- Include the manual incrementation of time and steps -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/incrementSteps"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="1sp"
            android:text="@string/button_inc_steps"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/incrementTime"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="1sp"
            android:text="@string/button_inc_time"
            android:textColor="@android:color/background_light" />
    </LinearLayout>


</LinearLayout>